--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personalizaçao de fundos</title>
+  <title>Posicionamento</title>
   <style>
     body {
-      background-image: url('https://gustavoguanabara.github.io/images/mascote-html5.png');
-      background-size: 100px;
-      background-repeat: no-repeat;
+      background-image: url('imagens/wallpaper003.jpg');
+      background-position: center center;
+      height: 96vh;
     }
   </style>
 </head>
 <body>
+  
 </body>
 </html>
