--- a/exercicios/ex024/paginasextras/pagina001.html
+++ b/exercicios/ex024/paginasextras/pagina001.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Site de teste</title>
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
+      background-color: lightslategray;
+      color: black;
     }
     table {
       border-collapse: collapse;
@@ -25,13 +27,19 @@
       background-color: gray;
     }
 
+    tr:nth-child(odd){
+      background-color: white;
+    }
+
     div#container {
       overflow-x: auto;
+      overflow-y: auto;
     }
+
   </style>
 </head>
 <body>
-  <h1>Tabelas em telas pequenas</h1>
+  <h1>Isso é um teste!!!</h1>
   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse fuga nisi, corrupti harum assumenda beatae, sed quo magnam cumque itaque exercitationem laboriosam totam cum perferendis ipsam molestias inventore sequi nesciunt!</p>
   <div id="container">
     <table>
