--- a/exercicios/ex025/form007.html
+++ b/exercicios/ex025/form007.html
@@ -7,10 +7,43 @@
 </head>
 <body>
   <h1>Exemplo de formulário</h1>
-  <form action="cadastro.php" method="get" autocomplete="on">
-
+  <form action="cadastro.php" method="post" autocomplete="on">
     <p>
-      
+      <label for="iest">Estado</label>
+      <select name="estado" id="iest">
+
+        <option value="" selected>--- Escolha ---</option>
+        <optgroup label="Região Sudeste">
+          <option value="SP">São Paulo</option>
+          <option value="RJ">Rio de Janeiro</option>
+          <option value="MG">Minas Gerais</option>
+        </optgroup>
+
+        <optgroup label="Região Nordeste">
+          <option value="MA">Maranhão</option>
+          <option value="CE">Ceará</option>
+          <option value="PE">Pernambuco</option>
+        </optgroup>
+
+      </select>
+    </p>
+    <p>
+      <label for="iprof">Profissão: </label>
+      <input type="text" name="prof" id="iprof" list="lstprof" placeholder="Sua Profissão">
+      <datalist id="lstprof">
+        <option value="ADM">Administrador</option>
+        <option value="CONT">Contabilista</option>
+        <option value="DEV">Desenvolvedor</option>
+        <option value="PROF">Professor</option>
+      </datalist>
+    </p>
+    <p>
+      <label for="imsg">Mensagem: </label><br>
+      <textarea name="msg" id="imsg" cols="30" rows="10"></textarea>
+    </p>
+    <p>
+      <input type="submit" value="Enviar">
+      <input type="reset" value="Limpar">
     </p>
     </form>
 </body>
