--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -6,8 +6,9 @@
   <link rel="stylesheet" href="estilos/style.css">
   <title>Media Query</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link rel="stylesheet" href="estilos/midiaquery.css">
 </head>
-<body>
+<body onresize="mudouTamanho">
   <header>
     <h1>Meu Site</h1>
     <i id="burguer" class="material-icons" onclick="clickmenu()">menu</i>
@@ -32,6 +33,15 @@
     </article>
   </main>
   <script>
+    function mudouTamanho() {
+      if (window.innerwidth >= 768) {
+        menu.style.display = 'none'
+      } else {
+        menu.style.display = 'block'
+      }
+    }
+
+
     function clickmenu() {
       if (menu.style.display == 'block') {
         menu.style.display = 'none'
